# pipelines

./: .gitattributes  .gitignore  Makefile  README.md  conda.sh  conda_env.yml  dag_lsst_hst_dag.dot  dag_pipeline_dag.dot  dataset-phot.sh  dataset.sh  eda-hst.sh  eda-lsst.sh  env.sh.template  generate-uml.sh  graph.dot  gzoo.sh  install.sh  lsst_cart.html  merge.sh  notes.md  plot.sh  pyproject.toml  random_dag.yaml  rsp_startup.sh  run.sh  sdss_morph_types_info.csv  sphinx-build.sh  test.sh
butler/: process.md  process.py
catalogs/: morphology_labels.csv  sky_region_labels.csv
docs/: astroos_pipelines.computer.rst  astroos_pipelines.config.rst  astroos_pipelines.hst.rst  astroos_pipelines.logger.rst  astroos_pipelines.lsst.rst  astroos_pipelines.mast.rst  astroos_pipelines.rst  astroos_pipelines.sdss.rst  astroos_pipelines.utils.plots.rst  astroos_pipelines.utils.rst  conf.py  index.rst  modules.rst
misc/: dag_pipeline_dag.dot  graph.dot
run/: mast.sh  plot.sh  sdss.sh  transfer.sh
scripts/: cloud_put.sh  computer.sh  config.sh  debug.sh  demo-site.sh  eda_hst.sh  graph.sh  hst-eda.sh  id.sh  init-rsp.sh  init.sh  list.sh  lsst-eda.sh  lsst-img-dia.sh  lsst-img.sh  lsst-phot.sh  lsst.sh  node-rsp.sh  node.sh  plot-colors.sh  plot-umap.sh  plot.sh  random-dag.sh  random-img.sh  run-rsp.sh  run.sh  sdss.sh  select.sh  status.sh  test.sh
src/: client_pipeline.py  datasets.py  morphometryka.py  pipelines.py  query.py  test.py  transforms.py
src/debug/: test3.py
test_data/: file.csv  file__Av__5fa2fa68.csv  file__Av__e2332d4f.parquet  file__colA__5fa2fa68.csv  (+3 more)
(+487 files in other folders)
